Chatbot/vs-hello.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mychatbot
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: mychatbot.default.svc.cluster.local
            port:
              number: 8501
